
MySQL Connector/Python
Copyright (c) 2009, 2025, Oracle and/or its affiliates.

Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-python/en/

v9.4.0
======

- WL#16966: Upgrade Python lz4 version
- WL#16963: Update the OpenTelemetry version
- WL#16962: Update the Python Protobuf version
- WL#16954: Make sdist packages pip installable
- BUG#37868219: RPM packages have incorrect copyright year in their metadata
- BUG#37859771: mysql/connector python version 9.3.0 has a regression which cannot persist binary data with percent signs in it
- BUG#37820231: Text based django ORM filters doesn't work with Connector/Python
- BUG#37806057: Rename extra option (when installing wheel package) to install webauthn functionality dependencies
- BUG#37774513: Inconsistent conversion to_sql for cext vs pure python
- BUG#37642447: The license type is missing from RPM package
- BUG#37627508: mysql/connector python fetchmany() has an off by one bug when argument given as 1
- BUG#37047789: Python connector does not support Django enum
- BUG#36452514: Missing version info resources
- BUG#34950958: MySQL Python Connector doesn't work with ssh in the same process
- BUG#34844347: Freezes on connection via sshtunnel

v9.3.0
======

- WL#16754: The host wildcard no longer applies to localhost
- WL#16752: Deprecate class methods to access instance data or to know instance internal state
- WL#16327: Remove Cursors Prepared Raw and Named Tuple
- BUG#37541353: (Contribution) Fix typing annotation of MySQLConnectionAbstract's close function
- BUG#37453587: Github links in PyPI project's pages do not work
- BUG#37418436: Arbitrary File Read in MySQL Python Client library
- BUG#37410052: Bad formatting of exceptions when connecting with Unix sockets
- BUG#37399636: The C-extension has a memory leak when working with prepared statements
- BUG#37275524: Exception is not interpreted properly on prepared statements when C extension is in use