@@ -15,6 +15,7 @@ v9.4.0
 - WL#16963: Update the OpenTelemetry version
 - WL#16962: Update the Python Protobuf version
 - WL#16954: Make sdist packages pip installable
+- BUG#38072835: Authentication OCI plugin option parameters not being supported by the aio connector
 - BUG#37868219: RPM packages have incorrect copyright year in their metadata
 - BUG#37859771: mysql/connector python version 9.3.0 has a regression which cannot persist binary data with percent signs in it
 - BUG#37820231: Text based django ORM filters doesn't work with Connector/Python
